--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,5 +1,5 @@
 {% set name = "huggingface_hub" %}
-{% set version = "0.0.16" %}
+{% set version = "0.0.19" %}
 
 
 package:
@@ -8,7 +8,7 @@ package:
 
 source:
   url: https://github.com/huggingface/{{ name }}/archive/v{{ version }}.tar.gz
-  sha256: 3eee9918e815d2638a33845bae5bcf4a9feb05d24d0bdd28be9f4951349097f1
+  sha256: 72621edcc2d6c2ca62a70c12f28a89345fc44b9dc7bc175a5ae3a6e7c6d6ad24
 
 build:
   number: 1
@@ -28,6 +28,7 @@ requirements:
     - requests {{ requests }}
     - tqdm  {{ tqdm }}
     - typing-extensions  {{ typing_extensions }}
+    - pyyaml {{ pyyaml }}
     # Only required for [py<38] but always include so this can be noarch: python
     - importlib_metadata
 
